--- a/admin/css/instapago-admin.css
+++ b/admin/css/instapago-admin.css
@@ -2,3 +2,9 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+
+.instapago_public_keyid,
+.instapago_keyid {
+    width: 30%;
+    max-width: 30%;
+}
